<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashCardFragment">

    <ImageView
        android:id="@+id/flippercard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_yello_card_600x800_150r"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/fc_specimen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specimen_default"
        style="@style/FlashCardSpecimenStyle"
        app:layout_constraintBottom_toBottomOf="@id/flippercard"
        app:layout_constraintEnd_toEndOf="@id/flippercard"
        app:layout_constraintStart_toStartOf="@id/flippercard"
        app:layout_constraintTop_toTopOf="@id/flippercard"
         />

    <TextView
        android:id="@+id/fc_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dict_word_type_default_text"
        style="@style/FlashCardTypeStyle"
        app:layout_constraintBottom_toTopOf="@+id/fc_translation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/flippercard"
        app:layout_constraintTop_toTopOf="@id/flippercard" />

    <TextView
        android:id="@+id/fc_translation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/dict_translation_default_text"
        style="@style/FlashCardTranslationStyle"
        app:layout_constraintBottom_toBottomOf="@id/flippercard"
        app:layout_constraintEnd_toEndOf="@id/flippercard"
        app:layout_constraintStart_toStartOf="@id/flippercard"
        app:layout_constraintTop_toBottomOf="@id/fc_type" />
</androidx.constraintlayout.widget.ConstraintLayout>