<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_item_frame_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_background"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/list_item_specimen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dict_word_default_text"
            style="@style/ReviewCardSpecimenTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/list_item_word_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_word_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dict_word_type_default_text"
            style="@style/ReviewCardTypeTextStyle"
            app:layout_constraintBottom_toTopOf="@+id/list_item_translation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_specimen" />

        <TextView
            android:id="@+id/list_item_translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/dict_translation_default_text"
            style="@style/ReviewCardTranslationTextStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_word_type" />

        <ImageView
            android:id="@+id/deleteEntry_reviewActivity_listEntry"
            android:layout_width="65dp"
            android:layout_height="57dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.951"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
